crates/mdt_core/src/snapshots/mdt_core____tests__snapshot_parse_consumer_with_all_transformers.snap
---
source: crates/mdt_core/src/__tests.rs
expression: blocks
---
[
    Block {
        name: "block",
        type: Consumer,
        opening: 1:1-1:111 (0-110),
        closing: 3:1-3:18 (115-132),
        transformers: [
            Transformer {
                type: Trim,
                args: [],
            },
            Transformer {
                type: TrimStart,
                args: [],
            },
            Transformer {
                type: TrimEnd,
                args: [],
            },
            Transformer {
                type: Indent,
                args: [
                    String(
                        "  ",
                    ),
                ],
            },
            Transformer {
                type: Prefix,
                args: [
                    String(
                        "# ",
                    ),
                ],
            },
            Transformer {
                type: Wrap,
                args: [
                    String(
                        "**",
                    ),
                ],
            },
            Transformer {
                type: CodeBlock,
                args: [
                    String(
                        "rs",
                    ),
                ],
            },
            Transformer {
                type: Code,
                args: [],
            },
            Transformer {
                type: Replace,
                args: [
                    String(
                        "a",
                    ),
                    String(
                        "b",
                    ),
                ],
            },
        ],
    },
]
