crates/mdt_core/src/snapshots/mdt_core____tests__snapshot_tokenize_consumer.snap
---
source: crates/mdt_core/src/__tests.rs
expression: groups
---
[
    TokenGroup {
        tokens: [
            HtmlCommentOpen,
            Whitespace(
                32,
            ),
            ConsumerTag,
            Ident(
                "exampleName",
            ),
            Pipe,
            Ident(
                "trim",
            ),
            Pipe,
            Ident(
                "indent",
            ),
            ArgumentDelimiter,
            String(
                "/// ",
                34,
            ),
            BraceClose,
            Whitespace(
                32,
            ),
            HtmlCommentClose,
        ],
        position: 1:1-1:45 (0-44),
    },
]
