crates/mdt_core/src/snapshots/mdt_core____tests__snapshot_tokenize_provider.snap
---
source: crates/mdt_core/src/__tests.rs
expression: groups
---
[
    TokenGroup {
        tokens: [
            HtmlCommentOpen,
            Whitespace(
                32,
            ),
            ProviderTag,
            Ident(
                "myProvider",
            ),
            BraceClose,
            Whitespace(
                32,
            ),
            HtmlCommentClose,
        ],
        position: 1:1-1:23 (0-22),
    },
]
